Switch language leve to Java 8, since no one has adopted anything newer yet :-/